--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -21,3 +21,6 @@ helloPanelTitle=Hello World
 openDialogButtonText=Say Hello With Dialog
 dialogCloseButtonText=Ok 
 invoiceListTitle=Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
