--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -1,29 +1,32 @@
-TITLE=todos
-INPUT_PLACEHOLDER=What needs to be done?
-CLEAR_COMPLETED=Clear completed
-ACTIVE_ITEMS=Active items
-ACTIVE_ITEMS_CONTAINING=Active items containing "{0}"
-COMPLETED_ITEMS=Completed items
-COMPLETED_ITEMS_CONTAINING=Completed items containing "{0}"
-ITEMS_CONTAINING=Items containing "{0}"
-LABEL_ALL=All
-LABEL_ACTIVE=Active
-LABEL_COMPLETED=Completed
-# Hello Panel
-showHelloButtonText=Say Hello
-helloMsg=Hello {0}
 # App Descriptor
 appTitle=Hello World
 appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
+
+# Hello Panel
+showHelloButtonText=Say Hello
+helloMsg=Hello {0}
 homePageTitle=Walkthrough
 helloPanelTitle=Hello World
-
 openDialogButtonText=Say Hello With Dialog
-dialogCloseButtonText=Ok 
+dialogCloseButtonText=Ok
+
+# Invoice List
 invoiceListTitle=Invoices
 invoiceStatusA=New
 invoiceStatusB=In Progress
 invoiceStatusC=Done
+columnQuantity=Quantity
+columnName=Name
+columnSupplier=Supplier
+columnStatus=Status
+columnPrice=Price
 
 # Detail Page
 detailPageTitle=Walkthrough - Details
+ratingConfirmation=You have rated this product with {0} stars
+
+# Product Rating
+productRatingLabelInitial=Please rate this product
+productRatingLabelIndicator=Your rating: {0} out of {1}
+productRatingLabelFinal=Thank you!
+productRatingButton=Rate
